Scrollbar issue on pages

--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -9,7 +9,7 @@ body {
     -webkit-font-smoothing: antialiased;
     padding:0;
     margin:0;
-    height: 100%;
+    height: calc(100% - 70px);
     background-color: $bodyBgColor;
 }
 
